使用 Colaboratory 建立

--- a/4070E118_Python開發平台GoogleColab教學版(解答).ipynb
+++ b/4070E118_Python開發平台GoogleColab教學版(解答).ipynb
@@ -27,10 +27,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "ZB1vSDQrJKd9"
+      },
+      "source": [
+        "4070E118 Vi Thi Hong Tuoi\r\n",
+        "20210305"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "F9zaHvCiBL6Q"
       },
       "source": [
         "# 使用Google Colab學習Python與人工智慧\n",
+        "\n",
         "```\n",
         "使用Google Colab平台學習Python程式設計\n",
         "使用Google Colab平台學習Python資料分析技術\n",
@@ -98,7 +109,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c9Iy7E4t881_"
+        "id": "c9Iy7E4t881_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "444e0c72-ba08-4059-cb02-f4299c66b3e4"
       },
       "source": [
         "import pandas as pd\n",
@@ -120,8 +135,45 @@
         "print(\"PyTorch version: %s\" %torch.__version__)\n",
         "print(\"2020年3月PyTorch version最新版本 是1.4 請參閱https://pytorch.org/\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "pandas version: 1.1.5\n",
+            "matplotlib version: 3.2.2\n",
+            "numpy version: 1.19.5\n",
+            "scikit-learn version: 0.22.2.post1\n",
+            "tensorflow version: 2.4.1\n",
+            "PyTorch version: 1.7.1+cu101\n",
+            "2020年3月PyTorch version最新版本 是1.4 請參閱https://pytorch.org/\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "urfEwFmMMsSS",
+        "outputId": "c6a5199f-fcc6-479c-a3e7-a343ed5eb12a"
+      },
+      "source": [
+        "print(\"hello\")"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
